# Agatha

./: .gitignore  .integrity_db.json  MASTER_CAPABILITIES.md  README.md  TODO.md  agatha-mcp-server.py  agatha.key  agatha.pub  agatha_kag.json  agatha_rag.index  agatha_rag.index.docs  agatha_unified.rs  docker-compose.yml  test_ethics_pillar.py  test_malware_logic.py  train_lora.py
.github/workflows/: ci.yml
agatha-agathos/: README.md  guardian_core.py  reporter.py
agatha-agathos/pillars/: ai_adv.py  blockchain_adv.py  cloud.py  (+27 more)
agatha-brain/: README.md  agatha_bridge.py  ethical_heat.json  get_agatha_status.py  governor.py  identity.py  key_vault.py  load_model.py  mission_controller.py  mission_planner.py  run_command.py  swarm_controller.py  toolbox.py
agatha-bridge/: package-lock.json  package.json
agatha-kakos/: Cargo.toml  README.md
agatha-kakos/src/: audit.rs  auth.rs  main.rs
agatha-kakos/src/shadows/: ai_subversion.rs  binary.rs  chaos.rs  cloud.rs  cloud_escape.rs  cognitive.rs  cognitive_hijack.rs  dark_web.rs  devops.rs  discovery_adv.rs  economic_entropy.rs  entropy.rs  entropy_adv.rs  evasion.rs  existential_entropy.rs  exploitation.rs  fintech.rs  forensics.rs  hardware_sabotage.rs  impact.rs  industrial.rs  infiltration.rs  intelligence.rs  intelligence_adv.rs  kernel_chaos.rs  mobile.rs  mod.rs  network_adv.rs  orbital_strike.rs  osint.rs  persistence_adv.rs  phantom.rs  quantum_collapse.rs  shadow_forensics.rs  systems.rs  telecom_infiltration.rs  web.rs
scripts/: ingestion_engine.py  orchestrate_ingestion.py
tests/: integration_suite.py
(+18 files in other folders)
