[package]
name = "agatha-kakos"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "socks"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
ring = "0.17.14"
uuid = { version = "1.23.2", features = ["v4", "fast-rng", "serde"] }
futures-util = "0.3.32"
windows-sys = { version = "0.52", features = ["Win32_System_Kernel", "Win32_System_SystemServices", "Win32_System_Threading", "Win32_System_Memory", "Win32_System_Diagnostics_Debug", "Win32_System_WindowsProgramming", "Win32_Security", "Win32_Foundation", "Win32_System_LibraryLoader", "Win32_System_ProcessStatus", "Win32_Storage_FileSystem", "Win32_System_Services"] }
aes-gcm = "0.10.3"
rsa = "0.9.10"
rand = "0.8"
filetime = "0.2.29"
pqcrypto-kyber = "0.8.1"
pqcrypto-dilithium = "0.5.0"
pqcrypto-traits = "0.3.5"
sha2 = "0.10"
ed25519-dalek = { version = "2.0", features = ["serde"] }
hex = "0.4"

